corregido los URLS del menu

--- a/areas_actuacion.html
+++ b/areas_actuacion.html
@@ -16,7 +16,7 @@
                    <li><a href="#">Inicio</a></li>
                    <li>
                         
-                        <a href="areas_actuacion.html#actuacion">Areas de actuacion</a>
+                        <a href="#actuacion">Areas de actuacion</a>
                      <ul class="menu-vertical">
                         <li><a href="#">psicologia clinica</a></li>
                         <li><a href="#">psicologia deportiva</a></li>
@@ -24,7 +24,7 @@
                     </ul> 
                 </li>
                 <li>
-                    <a href="contacto.html#contacto">Contacto</a>
+                    <a href="#">Contacto</a>
                      <ul class="menu-vertical">
                         <li><a href="#">Direccion</a></li>
                         <li><a href="#">Email</a></li>
@@ -54,7 +54,6 @@
         </header>
         <main>
             <section class="contenedor sobre-nosotros">
-                <a name="servicios"/>
                 <h2 class="titulo">Nuestro producto</h2>
                 <div class="contenedor-sobre-nosotros">
                     <img src="Imagenes/psicologia-del-color.jpeg" alt="Logo de nuestra empresa" class="imagen-sobre-nosotros">
@@ -152,7 +151,7 @@
                 </div>
             </div>
             </section>
-            
+            <a name="servicios"/>
             <section class="sobre-servicios">
                 <div class="contenedor">
                     <h2 class="titulo">Nuestros servicios</h2>
@@ -178,7 +177,6 @@
             </section>
         </main>
         <footer>
-            <a name="contacto"/>
             <div class="contenedor-footer">
                 <div class="content-foo">
                     <h4>Telefono</h4>
